TroubleShooting/3_eks_failure/kubernetes/01/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: preprod
  name: preprod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: preprod
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: preprod
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: foo
  namespace: preprod
spec:
  containers:
  - name: foo
    image: alpine/curl:3.14
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 100m
        memory: 256Mi
    command: ['sleep', '86400']
---
apiVersion: v1
kind: Pod
metadata:
  name: bar
  namespace: preprod
spec:
  containers:
  - name: bar
    image: alpine/curl:3.14
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 100m
        memory: 256Mi
    command: ['sleep', '86400']
