TroubleShooting/3_eks_failure/kubernetes/01/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: preprod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: preprod
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
